# CaseWareHomeTakeTest

./: .env.example  AGENTS.md  DESIGN.md  Makefile  README.md  alembic.ini  pyproject.toml  spec.md  specs.md
assets/: README.md
docs/superpowers/plans/: 2026-04-20-receipt-processing-agent.md  2026-04-21-agentic-graph.md  2026-04-21-image-paths-input.md  2026-04-22-filter-by-category.md
docs/superpowers/specs/: 2026-04-20-invoice-processing-agent-design.md  2026-04-20-receipt-processing-agent-design.md  2026-04-21-agentic-graph-design.md  2026-04-21-image-paths-input-design.md  (+1 more)
migrations/: env.py
migrations/versions/: 0001_initial.py
src/: composition_root.py  config.py  main.py
src/application/: agent_prompts.py  event_bus.py  events.py  graph.py  ports.py  subagent.py  tool_registry.py  traced_tool.py
src/domain/: aggregation.py  models.py  normalization.py
src/infrastructure/: agent_tools.py
tests/: conftest.py  test_config.py
tests/application/: test_chat_model_port.py  test_event_bus.py  test_events.py  test_graph.py  test_graph_agentic.py  test_json_logs_adapter.py  test_subagent.py  test_tool_registry.py  test_traced_tool.py
tests/domain/: test_aggregation.py  test_models.py  test_normalization.py
tests/e2e/: test_real_run_smoke.py
tests/fakes/: fake_chat_model.py  in_memory_repos.py  mock_image_loader.py  mock_llm.py  mock_ocr.py  test_fake_chat_model.py
tests/infrastructure/: conftest.py  test_list_path_loader.py  test_repositories.py  test_runs_stream.py
transcripts/: README.md  sample-run-trace.json
(+17 files in other folders)
