[project]
name = "receipt-agent"
version = "0.1.0"
description = "Local receipt-processing agent with SSE streaming."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.29",
  "sse-starlette>=2.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "langchain>=0.3,<0.4",
  "langchain-core>=0.3,<0.4",
  "langgraph>=0.2",
  "langfuse>=2.50,<3.0",
  "openai>=1.40",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
  "e2e: end-to-end test requiring real API keys and network",
]
testpaths = ["tests"]

[tool.setuptools]
# No package install needed — we use pytest's pythonpath and `PYTHONPATH=src` at runtime.
